Removed quit modes that were not relevant. Added launch intent quit mode. Updated documentation HowToUseURLPrint

--- a/BrowserIntentURLServices/SampleHTML/index.html
+++ b/BrowserIntentURLServices/SampleHTML/index.html
@@ -4,6 +4,9 @@
 	<body>
 		<div>
 			<button onclick="print();" style="width: 50%;height: 10%;font-size: -webkit-xxx-large;">Print</button>
+		<a id="test" href="intent://printzpl/#Intent;scheme=plaintext;package=com.zebra.browserintenturl;S.template=CT~~CD,~CC^~CT~^XA^FO0,0^ADN,80,40^FDDonnees1^FS^FO0,70^ADN,50,30^FDDonnees2^FS^FO0,120^ADN,30,20^FDDonnees3^FS^XZ;S.verbose=true;end"
+		style="width: 50%;height: 10%;font-size: -webkit-xxx-large;">Print HRef</a>
+
 		</div>
 	<script>
 		function print()
@@ -13,3 +16,8 @@
 	</script>
 	</body>
 </html>
+
+
+<!-- 
+window.open("intent://printzpl/#Intent;scheme=plaintext;package=com.zebra.browserintenturl;S.template=^XA^FO10,10^ADN,300,70^FDTEST^FS^XZ;S.verbose=true;S.quitmode=LAUNCH_INTENT;S.component=org.mozilla.firefox;S.class=org.mozilla.firefox/org.mozilla.gecko.BrowserApp;end")
+-->
